tests/paczka2/big_fuzzy/19906934.err
Error in line 1: SFHc5Nlq5JJ A615 92,27
Error in line 5: SFHc5Nlq5JJ A615 102,0
Error in line 17: SFHc5Nlq5JJ A615 41,5
Error in line 9: o5sRJxFrs A37 12,2
Error in line 19: SFHc5Nlq5JJ A37 16,4
Error in line 32: A911 A615 42,3
Error in line 37: B7dlKu A719 13,5
Error in line 31: SFHc5Nlq5JJ A719 79,7
Error in line 38: B7dlKu A615 1,0
Error in line 45: RvzBvRf A615 224,78
Error in line 43: B7dlKu A719 65,6
Error in line 48: o5sRJxFrs A911 33,1
Error in line 50: B7dlKu A911 9,0
Error in line 59: o5sRJxFrs A719 21,1
Error in line 46: TUCuZM A911 51,9
Error in line 61: SFHc5Nlq5JJ A911 42,1
Error in line 66: B7dlKu A719 3,3
Error in line 64: A911 A719 8,2
Error in line 90: RvzBvRf A719 4,0
Error in line 93: RvzBvRf A37 63,1
Error in line 91: TUCuZM A719 15,2
Error in line 100: TUCuZM A911 91,4
Error in line 119: TUCuZM A911 93,1
Error in line 129: RvzBvRf A615 77,3
Error in line 131: RvzBvRf A37 1,6
Error in line 140: TUCuZM A911 -1,4
Error in line 142: o5sRJxFrs A719 73,9
Error in line 109: gqwAJg A615 193,4
Error in line 147: o5sRJxFrs A615 42,8
Error in line 143: RvzBvRf A615 75,2
Error in line 157: o5sRJxFrs A911 37,4
Error in line 165: TUCuZM A911 245,4
Error in line 178: A911 A37 46,4
Error in line 181: o5sRJxFrs A911 94,5
Error in line 176: TUCuZM A719 28,2
Error in line 173: SFHc5Nlq5JJ A37 5,0
Error in line 189: gqwAJg A71Ç 77,1
Error in line 187: A911 A911 5,4
Error in line 190: gqwAJg A719 384,7
Error in line 193: TUCuZM A37 342,9
Error in line 198: TUCuZM A615 98,9
Error in line 191: A911 A719 36,3
Error in line 208: A911 A615 52,9
Error in line 213: TUCuZM A719 -2,4
Error in line 215: B7dlKu A37 87,5
Error in line 205: TUCuZM A719 32,9
Error in line 234: SFHc5Nlq5JJ A37 258,5
Error in line 237: SFHc5Nlq5JJ A719 92,9
Error in line 244: RvzBvRf A911 16,8
